force-app/main/default/objects/issueUpdateServices__c/issueUpdateServices__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>issueUpdateServices</label>
</CustomObject>