force-app/main/default/objects/issueUpdateServices__c/fields/ccTo1__c.field-meta.xml
<CustomField>
    <fullName>ccTo1__c</fullName>
    <label>ccTo1</label>
    <type>Email</type>
</CustomField>