force-app/main/default/objects/issueUpdateServices__c/fields/ccTo2__c.field-meta.xml
<CustomField>
    <fullName>ccTo2__c</fullName>
    <label>ccTo2</label>
    <type>Email</type>
</CustomField>