force-app/main/default/objects/issueUpdateServices__c/fields/Primary_Receiver1__c.field-meta.xml
<CustomField>
    <fullName>Primary_Receiver1__c</fullName>
    <label>Primary Receiver1</label>
    <type>Email</type>
</CustomField>