force-app/main/default/objects/issueUpdateServices__c/fields/Primary_Receiver__c.field-meta.xml
<CustomField>
    <fullName>Primary_Receiver__c</fullName>
    <label>Primary Receiver</label>
    <type>Email</type>
</CustomField>