force-app/main/default/objects/issueUpdateServices__c/fields/replyTo__c.field-meta.xml
<CustomField>
    <fullName>replyTo__c</fullName>
    <label>replyTo</label>
    <type>Email</type>
</CustomField>