force-app/main/default/objects/issueUpdateServices__c/fields/Send_Updates__c.field-meta.xml
<CustomField>
    <fullName>Send_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Updates</label>
    <type>Checkbox</type>
</CustomField>